Weird bug right now on mobile version
Now fcking mobile nav broke again, that piece of :poop:

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -56,8 +56,10 @@ nav {
 	top: 0;
 	height: 100%;
 }
-
-.nav {
+ul {
+	list-style-type: circle;
+&.nav {
+	
 	display: none;
 	list-style-type: none;
 	margin: 0;
@@ -74,7 +76,8 @@ nav {
 			color: white;
 		}
 	}
-}
+}}
+
 
 .logo {
 	display: none;
